[package]
name = "async-uring"
version = "0.0.1"
edition = "2021"
authors = ["lsongzhi <lsongzhi@163.com>"]
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/async-uring/0.0.0/async-uring"
repository = "https://github.com/songzhi/async-uring"
homepage = "https://github.com/songzhi/async-uring"
description = """
io-uring support for the futures asynchronous runtime.
"""
categories = ["asynchronous", "network-programming"]
keywords = ["async", "fs", "io-uring", "futures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-io = "1.7"
async-task = "4.2"
atomic-waker = "1.0"
bytes = "1.1"
cache-padded = "1.2"
concurrent-queue = "1.2"
futures-lite = "1.12"
io-uring = { version = "0.5", features = ["unstable"] }
libc = "0.2"
scoped-tls = "1.0"
slab = "0.4"
os_socketaddr = "0.2"
socket2 = {version = "0.4", features = ["all"]}

[dev-dependencies]
criterion = "0.3"
smol = "1.2"
tempfile = "3.3"
